# a2a-swap

./: .env.example  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  LICENSE  README.md  RELEASE.md  package.json  test-local.sh  tsconfig.scripts.json
.github/workflows/: api.yml  release.yml
a2a-swap-api/: README.md  package.json  wrangler.toml
a2a-swap-api/src/: env.ts  index.ts
a2a-swap-api/src/lib/: constants.ts  math.ts  rpc.ts
a2a-swap-api/src/middleware/: x402.ts
a2a-swap-api/src/routes/: convert.ts  poolInfo.ts  positions.ts  simulate.ts
cli/: Cargo.toml
cli/src/: main.rs
docs/: README.md  SUMMARY.md  changelog.md  cli.md  faq.md  http-api.md  langchain.md  mcp.md  program-reference.md  quickstart.md  rust-sdk.md  typescript-sdk.md
docs/examples/: README-integration.md  elizaos-example.ts  rust-agent-example.rs
eliza-plugin/: package-lock.json  package.json  test-devnet.mjs  test-mainnet.mjs
eliza-plugin/src/: schemas.ts
eliza-plugin/src/actions/: capabilityCard.ts  poolInfo.ts  removeLiquidity.ts  swap.ts
langchain-plugin/: README.md  pyproject.toml
langchain-plugin/a2a_swap_langchain/: _cli.py  tools.py
langchain-plugin/examples/: crewai_example.py  langchain_example.py
mcp-a2a-swap/: package-lock.json  package.json  smithery.yaml
mcp-a2a-swap/src/: index.ts
programs/a2a-swap/: Cargo.toml
programs/a2a-swap/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/a2a-swap/src/instructions/: approve_and_execute.rs  claim_fees.rs  fee_math.rs  initialize_pool.rs  provide_liquidity.rs  remove_liquidity.rs  swap.rs
scripts/: create-sol-usdc-pool.ts  init-treasury.ts  keep-alive-swap.ts  moltbook-post.ts  reseed-pool.ts  smoke-devnet.ts  test-other-pools.ts  test-swaps.ts
sdk/: Cargo.toml
sdk-ts/: README.md  package.json  tsconfig.json
sdk-ts/src/: client.ts  index.ts  instructions.ts  math.ts  state.ts  types.ts
sdk/src/: client.rs  instructions.rs  lib.rs  state.rs  types.rs
tests/: a2a-swap.ts  cli-integration.test.ts
