[package]
name        = "a2a-swap-sdk"
version     = "0.1.1"
edition     = "2021"
description = "A2A-Swap Rust SDK — agent-native constant-product AMM client for Solana"
license     = "MIT"
repository  = "https://github.com/a2a-swap/a2a-swap"
homepage    = "https://github.com/a2a-swap/a2a-swap"
documentation = "https://docs.rs/a2a-swap-sdk"
keywords    = ["solana", "amm", "defi", "agent", "swap"]
categories  = ["cryptography::cryptocurrencies"]
readme      = "../README.md"
rust-version = "1.75"

[lib]
name = "a2a_swap_sdk"
path = "src/lib.rs"

[dependencies]
# Solana primitives — same versions as the on-chain program
solana-sdk    = "2.1"
solana-client = "2.1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling — thiserror for libraries (callers choose their own anyhow/etc.)
thiserror = "1"

[dev-dependencies]
# For #[tokio::test] in integration tests
tokio = { version = "1", features = ["full"] }
